--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,20 @@
-flask==2.3.3
+# Core Dependencies - Python 3.13.4 Compatible
+flask==3.0.0
 flask-cors==4.0.0
-requests==2.31.0
+requests==2.32.3
+python-dotenv==1.0.1
+
+# Production Server
+gunicorn==22.0.0
+
+# Enhanced Performance
+ujson==5.9.0
+
+# Security
+cryptography==42.0.5
+
+# Timezone Support
+pytz==2024.1
+
+# System Monitoring
+psutil==5.9.8
