--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,7 @@
-# Web Framework
-Flask==3.0.3
-flask-cors==4.0.1
-Werkzeug==3.0.3
-
-# HTTP Client
-requests==2.32.3
-urllib3==2.2.2
-certifi==2024.7.4
-charset-normalizer==3.3.2
-idna==3.7
-
-# Environment Variables
-python-dotenv==1.0.1
-
-# Utilities
-typing-extensions==4.12.2
-MarkupSafe==2.1.5
-Jinja2==3.1.4
-itsdangerous==2.2.0
-click==8.1.7
-blinker==1.8.2
-
-# Optional but recommended for production
-gunicorn==22.0.0
+fastapi==0.92.0
+uvicorn==0.20.0
+python-binance==1.0.16
+aiohttp==3.8.3
+websockets==10.4
+python-dotenv==1.0.0
+pydantic==1.10.2
