--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,5 @@ fastapi==0.113.0
 pydantic==2.8.0
 python-binance==1.0.29
 python-dotenv==1.0.0
-uvicorn==0.35.0
+hypercorn==0.15.0  # Using hypercorn instead of uvicorn due to Python 3.13 compatibility
 websockets==11.0.0
-aiohttp==4.0.0
